style.css
@layer fonts {
  /* space-mono-700 - latin */
  @font-face {
    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
    font-family: "Space Mono";
    font-style: normal;
    font-weight: 700;
    src: url("/assets/fonts/space-mono-v17-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
  }
  /* lexend-deca-regular - latin */
  @font-face {
    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
    font-family: "Lexend Deca";
    font-style: normal;
    font-weight: 400;
    src: url("/assets/fonts/lexend-deca-v24-latin-regular.woff2")
      format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
  }

  :root {
    --ff-mono: "Space Mono", "Courier New", Courier, monospace;
    --fs-56: calc(56 / 16 * 1rem);
    --fs-48: calc(48 / 16 * 1rem);
    --fs-40: calc(40 / 16 * 1rem);
    --fs-32: calc(32 / 16 * 1rem);
    --fs-24: calc(24 / 16 * 1rem);
    --fs-20: calc(20 / 16 * 1rem);
    --fs-15: calc(15 / 16 * 1rem);
  }

  h1 {
    font-size: var(--fs-40);
    letter-spacing: -1.79px;

    @media (width >= calc(700 / 16 * 1rem)) {
      font-size: var(--fs-56);
      letter-spacing: -2.5px;
    }
  }

  h2 {
    font-size: var(--fs-32);
    letter-spacing: -1.43px;

    @media (width >= calc(700 / 16 * 1rem)) {
      font-size: var(--fs-48);
      letter-spacing: -2.14px;
    }
  }

  h3 {
    font-size: var(--fs-20);
    letter-spacing: -0.89px;

    @media (width >= calc(700 / 16 * 1rem)) {
      font-size: var(--fs-24);
      letter-spacing: -1.07px;
    }
  }
}

@layer colors {
  :root {
    --c-white: hsl(0, 0%, 100%);
    --c-yellow: hsl(40, 97%, 58%);
    --c-xdark-navy: hsl(215, 14%, 23%);
    --c-dark-navy: hsl(216, 17%, 35%);
    --c-dim-grey: hsl(217, 12%, 62%);
    --c-light-grey: hsl(212, 41%, 93%);
    --c-snow: hsl(214, 37%, 96%);
    --c-light-yellow: hsl(39, 100%, 94%);
    --c-black-overlay: hsla(0, 0%, 0%, 0.75);
  }
}

@layer global {
  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  body {
    margin: 0;
    min-height: 50vh; /* temporary - delete after complete */
    font-family: "Lexend Deca", Arial, Helvetica, sans-serif;
    font-size: var(--fs-15);
  }

  img {
    max-width: 100%;
    height: auto;
    display: block;
  }

  h1,
  h2,
  h3 {
    font-family: var(--ff-mono);
    margin: 0;
    line-height: 1.1;
  }

  p {
    line-height: 1.6;
  }

  a {
    text-decoration: none;
  }

  header ul,
  footer ul {
    margin: 0;
    padding: 0;

    li {
      list-style-type: none;
    }
  }
}

@layer layout {
  .wrapper {
    display: grid;
    grid-template-columns: 1fr calc(100% - 64px) 1fr;

    @media (width >= calc(700 / 16 * 1rem)) {
      grid-template-columns: 1fr min(calc(100% - 80px), calc(1110 / 16 * 1rem)) 1fr;
    }

    > * {
      grid-column: 2;
    }

    > .fullbleed {
      grid-column: 1 / -1;
    }
  }
}

@layer button {
  .button {
    display: block;
    background: var(--c-yellow);
    width: fit-content;
    padding: 14px 40px;
    color: var(--c-white);
    font-family: var(--ff-mono);
  }
}

@layer header {
  .header {
    padding-block: 20px;
    align-items: center;

    .header-logo,
    .header-links {
      grid-row: 1;
    }
    .header-logo {
      justify-self: center;
      width: calc(75 / 16 * 1rem);

      @media (width >= calc(700 / 16 * 1rem)) {
        justify-self: start;
        width: calc(108 / 16 * 1rem);
      }
    }

    .header-links {
      justify-self: start;
      display: grid;
      align-items: center;

      @media (width >= calc(700 / 16 * 1rem)) {
        padding-left: 167px;
        width: 100%;
      }
    }
  }
}

@layer topnav {
  .topnav {
    &::before {
      content: "";
      position: fixed;
      inset: 69px 0 0 0;
      background: var(--c-black-overlay);
      opacity: 0;
      pointer-events: none;
      transition: opacity 0.5s ease-in-out;
    }
    &:has(.topnav__open[aria-expanded="true"])::before {
      opacity: 1;
    }
  }

  .topnav button {
    translate: 0 2px;
    background: none;
    border: none;
    padding: 0;

    @media (width >= calc(700 / 16 * 1rem)) {
      display: none;
    }
  }

  .topnav__open[aria-expanded="true"] {
    display: none;

    + .topnav__menu .topnav__menu-content {
      translate: 0;

      @media (prefers-reduced-motion) {
        opacity: 1;
      }
    }
    + .topnav__menu-content::before {
      opacity: 1;
    }
    + .topnav__menu .topnav__close {
      display: block;
    }
  }

  .topnav__close {
    display: none;
    margin-inline-start: auto;
    margin-block-end: 8rem;
    position: absolute;
    top: 24px;
  }

  .topnav__menu-content {
    display: flex;
    justify-content: space-between;

    @media (width < calc(700 / 16 * 1rem)) {
      flex-direction: column;
      position: fixed;
      inset: 69px 120px 0 0;
      padding: 64px 32px 24px;
      background-color: var(--c-xdark-navy);
      translate: -100vw 0;
      transition: translate 0.5s ease-in-out;
    }

    @media (width < calc(700 / 16 * 1rem)) and (prefers-reduced-motion) {
      translate: 0;
      opacity: 0;
      transition: opacity 500ms ease-in-out;
    }
  }

  .topnav__links {
    display: flex;
    align-items: center;
    gap: 1rem;
    margin: 0;
    padding: 0;

    @media (width < calc(700 / 16 * 1rem)) {
      flex-direction: column;
      align-items: stretch;
    }
  }

  .topnav__item {
    list-style-type: none;
  }

  .topnav__link {
    font-family: var(--ff-mono);
    font-weight: 700;
    color: var(--c-light-grey);

    @media (width >= calc(700 / 16 * 1rem)) {
      color: var(--c-dim-grey);
    }
  }
}

@layer hero {
  .hero {
    > * {
      grid-row: 1;
    }
    .hero-picture {
      max-height: 100vh;
      overflow: clip;
    }
    .hero-img {
      width: 100%;
    }
    .hero-content {
      place-self: center;
      justify-items: center;
      display: grid;
      color: var(--c-white);
      align-self: center;
      translate: 0 -24px;
      text-align: center;

      @media (width >= calc(700 / 16 * 1rem)) {
        max-width: 75%;
      }

      @media (width >= calc(1000 / 16 * 1rem)) {
        justify-self: start;
        justify-items: start;
        text-align: left;
        max-width: 55ch;
        translate: 0;
      }
    }

    p,
    .button {
      @media (width >= calc(1000 / 16 * 1rem)) {
        margin-inline-start: 95px;
      }
    }

    p {
      margin-block: 24px 32px;
    }

    .hero-l-arrow {
      display: none;

      @media (width >= calc(1000 / 16 * 1rem)) {
        display: block;
        align-self: center;
        translate: -140px 32px;
      }
    }

    .hero-r-arrow {
      align-self: end;
      translate: -240px -34px;

      @media (width >= calc(700 / 16 * 1rem)) {
        translate: -110px -34px;
      }

      @media (width >= calc(1000 / 16 * 1rem)) {
        translate: 530px 100px;
        grid-column: 2;
        align-self: center;
      }
    }

    .hero-circles {
      display: none;

      @media (width >= calc(700 / 16 * 1rem)) {
        display: block;
        justify-self: end;
        align-self: end;
        translate: 30px -45px;
      }

      @media (width >= calc(1000 / 16 * 1rem)) {
        display: none;
      }

      @media (width >= calc(1300 / 16 * 1rem)) {
        display: block;
        align-self: center;
        translate: 30px 130px;
      }
    }
  }
}

